# hax

./: .gitignore  DOCKER_USAGE.md  README.md  TEST_GUIDE.md  build_dev_ws.sh  build_in_container.sh  ros_env.sh  ros_jazzy.sh  stage1_build.sh  test_pub_sub.sh  test_stage1.sh
robot_ws/: README.md
robot_ws/src/robot_control/: CMakeLists.txt  package.xml
robot_ws/src/robot_control/src/: motor_driver.cpp  pid_controller.cpp
robot_ws/src/robot_description/: CMakeLists.txt  package.xml
robot_ws/src/robot_description/urdf/: robot.urdf
robot_ws/src/robot_launch/: CMakeLists.txt  package.xml
robot_ws/src/robot_launch/config/: nav2_params.yaml  robot.rviz
robot_ws/src/robot_launch/launch/: robot_bringup.launch.py  rviz.launch.py
robot_ws/src/robot_navigation/: CMakeLists.txt  package.xml
robot_ws/src/robot_navigation/src/: nav_server.cpp  slam_node.cpp
robot_ws/src/robot_perception/: CMakeLists.txt  package.xml
robot_ws/src/robot_perception/src/: obstacle_detector.cpp  sensor_fusion.cpp
single/: .gitignore  PUBSUB_SOLUTION.md  test_simple.sh
single/stage1_basic_control/: CMakeLists.txt  LEARNING_PATH.md  README.md  TROUBLESHOOTING.md  package.xml  quick_start.sh
single/stage1_basic_control/launch/: basic_control.launch.py  keyboard_only.launch.py
single/stage1_basic_control/src/: teleop_keyboard.cpp  velocity_publisher.cpp  velocity_subscriber.cpp
single/stage2_robot_description/: CMakeLists.txt  README.md  package.xml
single/stage2_robot_description/launch/: description.launch.py
single/stage2_robot_description/src/: tf_dynamic_broadcaster.cpp  tf_static_broadcaster.cpp
single/stage2_robot_description/urdf/: simple_robot.urdf
single/stage3_sensor_processing/: CMakeLists.txt  README.md  package.xml
single/stage3_sensor_processing/launch/: sensor_processing.launch.py
single/stage3_sensor_processing/src/: scan_recorder.cpp  scan_safety_checker.cpp
single/stage4_base_control/: CMakeLists.txt  README.md  package.xml
single/stage4_base_control/launch/: controller_launch.py
single/stage4_base_control/src/: velocity_controller.cpp
single/stage5_localization/: CMakeLists.txt  README.md  package.xml
single/stage5_localization/config/: ekf.yaml  rviz_localization.rviz
single/stage5_localization/launch/: localization_launch.py
single/stage5_localization/src/: sim_imu_publisher.cpp  sim_odom_publisher.cpp
single/stage6_mapping/: CHECKLIST.md  CMakeLists.txt  OPTIMIZATION_SUMMARY.md  PROBLEM_ANALYSIS.md  QUICKSTART.md  QUICKSTART_ENHANCED.md  README.md  package.xml
single/stage6_mapping/config/: mapping.rviz
single/stage6_mapping/launch/: full_mapping_test.launch.py  mapper_enhanced_launch.py  mapper_launch.py  mapper_launch_enhanced.py
single/stage6_mapping/maps/: .gitkeep
single/stage6_mapping/scripts/: generate_diagrams.py
single/stage6_mapping/src/: scan_simulator.cpp  simple_mapper.cpp  simple_mapper_enhanced.cpp
single/stage7_path_planning/: CMakeLists.txt  README.md  package.xml
single/stage7_path_planning/launch/: planner_launch.py
single/stage7_path_planning/src/: simple_planner.cpp
