<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <!-- 包的基本信息 -->
  <name>stage1_basic_control</name>
  <version>0.1.0</version>
  <description>
    阶段1：ROS2基础与移动控制
    包含速度发布、订阅和键盘遥控功能
  </description>
  
  <!-- 维护者信息 -->
  <maintainer email="student@example.com">ROS2 Student</maintainer>
  
  <!-- 开源许可证 -->
  <license>Apache-2.0</license>
  
  <!-- 作者信息（可选） -->
  <author>ROS2 Learning Team</author>
  
  <!-- 构建工具依赖 -->
  <!-- ament_cmake 是 ROS2 的标准 CMake 构建系统 -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- 依赖包 -->
  <!-- depend 标签表示编译和运行时都需要的依赖 -->
  
  <!-- rclcpp: ROS2 C++ 客户端库 -->
  <!-- 提供节点、发布者、订阅者、定时器等核心API -->
  <depend>rclcpp</depend>
  
  <!-- geometry_msgs: 几何相关的消息类型 -->
  <!-- 包含 Twist（速度）、Pose（位姿）、Point（点）等消息 -->
  <depend>geometry_msgs</depend>
  
  <!-- 测试依赖（可选，后续阶段会用到） -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <!-- 导出信息 -->
  <export>
    <!-- 指定构建类型为 ament_cmake -->
    <build_type>ament_cmake</build_type>
  </export>
  
  <!--
  package.xml 详解：
  
  1. format="3" 表示使用第三代包格式（ROS2推荐）
  
  2. 依赖类型说明：
     - <buildtool_depend>: 构建工具依赖（如 ament_cmake）
     - <depend>: 编译和运行时都需要
     - <build_depend>: 仅编译时需要
     - <exec_depend>: 仅运行时需要
     - <test_depend>: 测试时需要
  
  3. 依赖解析顺序：
     当执行 colcon build 时，会先安装 buildtool_depend，
     然后按依赖关系编译所有包。
  
  4. 常用ROS2包：
     - rclcpp: C++ API
     - rclpy: Python API
     - std_msgs: 标准消息（String, Int32等）
     - sensor_msgs: 传感器消息（LaserScan, Image等）
     - nav_msgs: 导航消息（Odometry, Path等）
     - tf2_ros: 坐标变换
  -->
</package>
