<?xml version="1.0"?>
<package format="3">
  <name>stage3_sensor_processing</name>
  <version>0.1.0</version>
  <description>Stage 3: LaserScan processing (safety checks + recording)</description>
  <maintainer email="hax@example.com">hax</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
