<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_navigation</name>
  <version>0.0.1</version>
  <description>SLAM and navigation nodes for delivery robot</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>nav2_msgs</depend>
  <depend>nav2_core</depend>
  <depend>nav_msgs</depend>
  <depend>Eigen3</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
